src/Projects/Projects.module.css
.mainContent {
  position: absolute;
  top: 25%;
  color: white;
  left: 50%;
  font-family: arial;
  transform: translate(-50%, 0%);
  text-align: center;
  font-size: 20px;
  height: auto;
}

.mainContent > h1 {
  font-size: 52px;
  font-family: arial;
}

.projects {
  margin: 24px auto;
  display: grid;
  gap: 4rem;
}

@media screen and (max-width: 1024px) {
  .mainContent {
    top: 25%;
  }
  .projects {
    grid-template-columns: auto;
  }
}

